add multiple heatmap divs

--- a/neural_network/index.html
+++ b/neural_network/index.html
@@ -39,9 +39,14 @@
 </nav>
 <div class="container">
     <div class="row">
-        <div id="matrix">
-
-        </div>
+        <div id="heatmap1"></div>
+        <div id="heatmap2"></div>
+        <div id="heatmap3"></div>
+        <div id="heatmap4"></div>
+        <div id="heatmap5"></div>
+        <div id="heatmap5"></div>
+        <div id="heatmap7"></div>
+        <div id="heatmap8"></div>
     </div>
 </div>
 
