--- a/neural_network/index.html
+++ b/neural_network/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="#">
         <img src="#" alt="logo" style="width:40px;">
@@ -39,7 +39,8 @@
     </ul>
 </nav>
 <div class="container">
-    <div class="row">
+    <div class="row row-content">
+        <div id="legend"></div>
         <div id="heatmap1"></div>
         <div id="heatmap2"></div>
         <div id="heatmap3"></div>
