--- a/neural_network/index.html
+++ b/neural_network/index.html
@@ -38,6 +38,22 @@
         </li>
     </ul>
 </nav>
+<!--<div class="container">-->
+<!--    <div class="row row-content">-->
+        <p>Each heatmap represents one feature.
+            For each feature, the rows represent 4 gates: <br>
+            i - input gate;<br>
+            f - forget gate;<br>
+            c - cell state;<br>
+            o - output gate.<br>
+            The columns represent the first layer with 50 LSTM cells.
+            The color domain is -1 to 1, negative values are redish, and positive values are blueish
+
+        </p>
+
+
+<!--    </div>-->
+<!--</div>-->
 <div class="container">
     <div class="row row-content">
         <div id="legend"></div>
