--- a/neural_network/index.html
+++ b/neural_network/index.html
@@ -16,6 +16,8 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -28,18 +30,18 @@
     <!-- Links -->
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="#">Demo</a>
+            <a class="nav-link" href="./index.html">Heatmap</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Video</a>
+            <a class="nav-link" href="./stream.html">Stream Graph</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#"></a>
         </li>
     </ul>
 </nav>
-<!--<div class="container">-->
-<!--    <div class="row row-content">-->
+<div class="container">
+    <div class="row row-content">
         <p>Each heatmap represents one feature.
             For each feature, the rows represent 4 gates: <br>
             i - input gate;<br>
@@ -47,13 +49,11 @@
             c - cell state;<br>
             o - output gate.<br>
             The columns represent the first layer with 50 LSTM cells.
-            The color domain is -1 to 1, negative values are redish, and positive values are blueish
-
         </p>
 
 
-<!--    </div>-->
-<!--</div>-->
+    </div>
+</div>
 <div class="container">
     <div class="row row-content">
         <div id="legend"></div>
@@ -67,10 +67,23 @@
         <div id="heatmap8"></div>
     </div>
 </div>
+<div class="container">
+
+    <div id="streamChart"></div>
+</div>
 
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://d3js.org/d3-color.v1.min.js"></script>
 <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
+
+
+<!--&lt;!&ndash;d3cf library&ndash;&gt;-->
+<!--<script src="https://unpkg.com/d3/dist/d3.min.js"></script>-->
+<!--<script src="https://unpkg.com/d3fc/build/d3fc.min.js"></script>-->
+
 <script src="js/matrix.js"></script>
+<!--<script  src="js/stream.js"></script>-->
+<!--<script  src="js/test.js"></script>-->
