--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -1,1 +1,72 @@
-<!doctype html><html lang="en"><head>    <!-- Required meta tags -->    <meta charset="utf-8">    <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1.0">    <meta http-equiv="X-UA-Compatible" content="IE=edge">    <title>LSTM Exploration</title>    <!-- Bootstrap CSS -->    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">    <link rel="stylesheet" href="css/main.css">    <link rel="stylesheet" href="css/matrix.css">    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script></head><body><nav class="navbar navbar-expand-sm bg-dark navbar-dark ">    <!-- Brand/logo -->    <a class="navbar-brand" href="#">        <img src="#" alt="logo" style="width:40px;">    </a>    <h4>LSTM Exploration</h4>    <!-- Links -->    <ul class="navbar-nav">        <li class="nav-item">            <a class="nav-link" href="./index.html">Heatmap</a>        </li>        <li class="nav-item">            <a class="nav-link" href="./stream.html">Stream Graph</a>        </li>        <li class="nav-item">            <a class="nav-link" href="#"></a>        </li>    </ul></nav><div class="container">    <div class="row row-content"><p>Each stream chart represents 1 LSTM cell in 1 feature of a certain gate, the x axis is epoch, the y axis is the value of the weights <br></p>    </div></div><div class="container">    <div class="row row-content">        <div id="streamChart"></div>    </div></div><script src="https://d3js.org/d3.v5.min.js"></script><script src="https://d3js.org/d3-color.v1.min.js"></script><script src="https://d3js.org/d3-interpolate.v1.min.js"></script><script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script><!--&lt;!&ndash;d3cf library&ndash;&gt;--><!--<script src="https://unpkg.com/d3/dist/d3.min.js"></script>--><!--<script src="https://unpkg.com/d3fc/build/d3fc.min.js"></script>--><!--<script src="js/matrix.js"></script>--><!--<script  src="js/stream.js"></script>--><script  src="js/stream.js"></script>
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>LSTM Exploration</title>
+
+    <!-- Bootstrap CSS -->
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/matrix.css">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+
+
+</head>
+
+<body>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
+    <!-- Brand/logo -->
+    <a class="navbar-brand" href="#">
+        <img src="#" alt="logo" style="width:40px;">
+    </a>
+    <h4>LSTM Exploration</h4>
+    <!-- Links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="./index.html">Heatmap</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="./stream.html">Stream Graph</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#"></a>
+        </li>
+    </ul>
+</nav>
+<div class="container">
+    <div class="row row-content">
+<p>Each stream chart represents 1 LSTM cell in 1 feature of a certain gate, the x axis is epoch, the y axis is the value of the weights <br>
+</p>
+
+
+    </div>
+</div>
+
+<div class="container">
+    <div class="row row-content">
+        <div id="streamChart"></div>
+    </div>
+</div>
+
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://d3js.org/d3-color.v1.min.js"></script>
+<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
+
+
+<!--&lt;!&ndash;d3cf library&ndash;&gt;-->
+<!--<script src="https://unpkg.com/d3/dist/d3.min.js"></script>-->
+<!--<script src="https://unpkg.com/d3fc/build/d3fc.min.js"></script>-->
+
+<!--<script src="js/matrix.js"></script>-->
+<!--<script  src="js/stream.js"></script>-->
+<script  src="js/stream.js"></script>
