--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/matrix.css">
+    <link rel="stylesheet" href="css/stream.css">
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -45,7 +47,6 @@
 <p>Each stream chart represents 1 LSTM cell in 1 feature of a certain gate, the x axis is epoch, the y axis is the value of the weights <br>
 </p>
 
-
     </div>
 </div>
 
@@ -67,6 +68,6 @@
 <!--<script src="https://unpkg.com/d3/dist/d3.min.js"></script>-->
 <!--<script src="https://unpkg.com/d3fc/build/d3fc.min.js"></script>-->
 
-<!--<script src="js/matrix.js"></script>-->
+
 <!--<script  src="js/stream.js"></script>-->
-<script  src="js/stream.js"></script>
+<script  src="js/test.js"></script>
