--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -44,7 +44,7 @@
 </nav>
 <div class="container">
     <div class="row row-content">
-<p>Each stream chart represents 1 LSTM cell in 1 feature of a certain gate, the x axis is epoch, the y axis is the value of the weights <br>
+<p>This is a test page. There are 50 stream graphs. Each represents 1 LSTM cell in feature 1, layer 1. The x axis is epoch, the y axis is the value of the weights, each color represent one gate in "i", "f", "c" and "o".<br>
 </p>
 
     </div>
@@ -71,3 +71,4 @@
 
 <!--<script  src="js/stream.js"></script>-->
 <script  src="js/test.js"></script>
+
