--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -59,6 +59,7 @@
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://d3js.org/d3-color.v1.min.js"></script>
 <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+<script src="https://d3js.org/d3-array.v2.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
@@ -70,5 +71,6 @@
 
 
 <!--<script  src="js/stream.js"></script>-->
-<script  src="js/test.js"></script>
+<!--<script  src="js/test.js"></script>-->
+<script  src="js/tt.js"></script>
 
