added divs for stream graphs

--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -46,15 +46,17 @@
     <div class="row row-content">
 <p>This is a test page. There are 50 stream graphs. Each represents 1 LSTM cell in feature 1, layer 1. The x axis is epoch, the y axis is the value of the weights, each color represent one gate in "i", "f", "c" and "o".<br>
 </p>
-
     </div>
 </div>
 
-<div class="container">
-    <div class="row row-content">
-        <div id="streamChart"></div>
-    </div>
-</div>
+<div id="stream1"></div>
+<div id="stream2"></div>
+<div id="stream3"></div>
+<div id="stream4"></div>
+<div id="stream5"></div>
+<div id="stream6"></div>
+<div id="stream7"></div>
+<div id="stream8"></div>
 
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://d3js.org/d3-color.v1.min.js"></script>
@@ -70,7 +72,7 @@
 <!--<script src="https://unpkg.com/d3fc/build/d3fc.min.js"></script>-->
 
 
-<!--<script  src="js/stream.js"></script>-->
+<script  src="js/stream.js"></script>
 <!--<script  src="js/test.js"></script>-->
-<script  src="js/tt.js"></script>
+<!--<script  src="js/tt.js"></script>-->
 
