changed to vertical layout

--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -60,16 +60,57 @@
 <!--        </div>-->
 <!--    </div>-->
 <!--</div>-->
-<div id="sLegend"></div>
-<div id="stream1"><p>Pollution</p></div>
-<div id="stream2"><p>Dew</p></div>
-<div id="stream3"><p>Temperature</div>
-<div id="stream4"><p>Pressure</div>
-<div id="stream5"><p>Wind direction</div>
-<div id="stream6"><p>Wind speed</div>
-<div id="stream7"><p>Snow</div>
-<div id="stream8"><p>Rain</div>
+<!--<div class="container">-->
+<!--    <div class="container">-->
+        <table class='table table-striped table-bordered'
+               style="width: 280px;">
+            <tbody>
+            <tr>
+                <td style="width:35px">
+                    <div id="stream1"><p>Poll</p></div>
 
+                </td>
+                <td style="width:35px">
+                    <div id="stream2"><p>Dew</p></div>
+
+                </td>
+                <td style="width:35px">
+                    <div id="stream3"><p>Temp</div>
+
+                </td>
+                <td style="width:35px">
+                    <div id="stream4"><p>Press</div>
+
+                </td>
+                <td style="width:35px">
+                    <div id="stream5"><p>WindD</div>
+
+                </td>
+                <td style="width:35px">
+                <div id="stream6"><p>WindS</div>
+            </td>
+                <td style="width:35px">
+                    <div id="stream7"><p>Snow</div>
+                </td>
+                <td style="width:35px">
+                    <div id="stream8"><p>Rain</div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+<!--    </div>-->
+<!--</div>-->
+<!--<div id="sLegend"></div>-->
+<!--<div id="stream1"><p>Pollution</p></div>-->
+<!--<div id="stream2"><p>Dew</p></div>-->
+<!--<div id="stream3"><p>Temperature</div>-->
+<!--<div id="stream4"><p>Pressure</div>-->
+<!--<div id="stream5"><p>Wind direction</div>-->
+<!--<div id="stream6"><p>Wind speed</div>-->
+<!--<div id="stream7"><p>Snow</div>-->
+<!--<div id="stream8"><p>Rain</div>-->
+
+<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://d3js.org/d3-color.v1.min.js"></script>
 <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
