--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -67,42 +67,103 @@
 <!--</div>-->
 <!--<div class="container">-->
 <!--    <div class="container">-->
-        <table class='table table-striped table-bordered'
-               style="width: 280px;">
-            <tbody>
-            <tr>
-                <td style="width:35px">
-                    <div id="stream1"><p>Poll</p></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-4">
+            <table class='table table-striped table-bordered'
+                   style="width: 280px;">
+                <tbody>
+                <tr>
+                    <td style="width:35px">
+                        <div id="stream1"><p>Poll</p></div>
 
-                </td>
-                <td style="width:35px">
-                    <div id="stream2"><p>Dew</p></div>
+                    </td>
+                    <td style="width:35px">
+                        <div id="stream2"><p>Dew</p></div>
 
-                </td>
-                <td style="width:35px">
-                    <div id="stream3"><p>Temp</div>
+                    </td>
+                    <td style="width:35px">
+                        <div id="stream3"><p>Temp</div>
 
-                </td>
-                <td style="width:35px">
-                    <div id="stream4"><p>Press</div>
+                    </td>
+                    <td style="width:35px">
+                        <div id="stream4"><p>Press</div>
 
-                </td>
-                <td style="width:35px">
-                    <div id="stream5"><p>WindD</div>
+                    </td>
+                    <td style="width:35px">
+                        <div id="stream5"><p>WindD</div>
 
+                    </td>
+                    <td style="width:35px">
+                    <div id="stream6"><p>WindS</div>
                 </td>
-                <td style="width:35px">
-                <div id="stream6"><p>WindS</div>
-            </td>
-                <td style="width:35px">
-                    <div id="stream7"><p>Snow</div>
-                </td>
-                <td style="width:35px">
-                    <div id="stream8"><p>Rain</div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                    <td style="width:35px">
+                        <div id="stream7"><p>Snow</div>
+                    </td>
+                    <td style="width:35px">
+                        <div id="stream8"><p>Rain</div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-4">
+            <table class='table table-striped table-bordered'
+                   style="width: 280px;">
+                <tbody>
+                <tr>
+                    <td style="width:35px">
+                        <div id="c1"><p>c1_l2</p></div>
+
+                    </td>
+                    <td style="width:35px">
+                        <div id="c2"><p>c2_l2</p></div>
+
+                    </td>
+                    <td style="width:35px">
+                        <div id="c3"><p>c3_l2</div>
+
+                    </td>
+                    <td style="width:35px">
+                        <div id="c4"><p>c4_l2</div>
+
+                    </td>
+                    <td style="width:35px">
+                        <div id="c5"><p>c5_l2</div>
+
+                    </td>
+                    <td style="width:35px">
+                        <div id="c6"><p>c6_l2</div>
+                    </td>
+                    <td style="width:35px">
+                        <div id="c7"><p>c7_l2</div>
+                    </td>
+                    <td style="width:35px">
+                        <div id="c8"><p>c8_l2</div>
+                    </td>
+                    <td style="width:35px">
+                        <div id="c9"><p>c9_l2</div>
+                    </td>
+                    <td style="width:35px">
+                        <div id="c10"><p>c10_l2</div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+
+        </div>
+
+    </div>
+
+</div>
+
+<div class="container-fluid">
+
+
+
+</div>
 <!--    </div>-->
 <!--</div>-->
 <!--<div id="sLegend"></div>-->
@@ -130,7 +191,7 @@
 <!--<script src="https://unpkg.com/d3fc/build/d3fc.min.js"></script>-->
 
 
-<script  src="js/stream.js"></script>
+<!--<script  src="js/stream.js"></script>-->
 <!--<script  src="js/test.js"></script>-->
-<!--<script  src="js/tt.js"></script>-->
+<script  src="js/tt.js"></script>
 
