updated second layer layout

--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -191,7 +191,7 @@
 <!--<script src="https://unpkg.com/d3fc/build/d3fc.min.js"></script>-->
 
 
-<!--<script  src="js/stream.js"></script>-->
+<script  src="js/stream.js"></script>
 <!--<script  src="js/test.js"></script>-->
-<script  src="js/tt.js"></script>
+<!--<script  src="js/tt.js"></script>-->
 
