--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -69,7 +69,7 @@
 <!--    <div class="container">-->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-4">
+        <div class="col-12 col-md-5">
             <table class='table table-striped table-bordered'
                    style="width: 280px;">
                 <tbody>
@@ -108,9 +108,9 @@
             </table>
         </div>
 
-        <div class="col-4">
+        <div class="col-12 col-md-5">
             <table class='table table-striped table-bordered'
-                   style="width: 280px;">
+                   style="width: 350px;">
                 <tbody>
                 <tr>
                     <td style="width:35px">
@@ -151,8 +151,19 @@
                 </tr>
                 </tbody>
             </table>
+        </div>
+        <div class="col-12 col-md-5">
+            <table class='table table-striped table-bordered'
+                   style="width: 35px;">
+                <tbody>
+                <tr>
+                    <td style="width:35px">
+                        <div id="output"><p>output</p></div>
 
-
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
 
     </div>
