--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -152,13 +152,14 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-12 col-md-5">
+        <div class="col-12 col-md-2">
             <table class='table table-striped table-bordered'
                    style="width: 35px;">
                 <tbody>
                 <tr>
                     <td style="width:35px">
-                        <div id="output"><p>output</p></div>
+                        <div id="opt"><p>output</p></div>
+
                     </td>
                 </tr>
                 </tbody>
@@ -186,7 +187,7 @@
 <!--<div id="stream7"><p>Snow</div>-->
 <!--<div id="stream8"><p>Rain</div>-->
 
-<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>-->
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://d3js.org/d3-color.v1.min.js"></script>
 <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
