added radio button

--- a/neural_network/stream.html
+++ b/neural_network/stream.html
@@ -10,14 +10,17 @@
 
     <!-- Bootstrap CSS -->
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/matrix.css">
     <link rel="stylesheet" href="css/stream.css">
+    <!-- Bootstrap JS -->
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<!--    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
 
 
 </head>
@@ -44,14 +47,17 @@
 </nav>
 
 
-<div class="checkBoxes">
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="negValues" value="Show negative">
-        <label class="form-check-label" for="negValues">Show negative</label>
-    </div>
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="posValues" value="Show positive">
-        <label class="form-check-label" for="posValues">Show positive</label>
+<div class="radios">
+    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+        <label class="btn btn-secondary active">
+            <input type="radio" name="negValues" id="negValues" autocomplete="off" checked> Show negative
+        </label>
+        <label class="btn btn-secondary">
+            <input type="radio" name="posValues" id="posValues" autocomplete="off"> Show positive
+        </label>
+        <label class="btn btn-secondary">
+            <input type="radio" name="both" id="both" autocomplete="off"> Show both
+        </label>
     </div>
 </div>
 
@@ -202,7 +208,7 @@
 <!--<script src="https://unpkg.com/d3fc/build/d3fc.min.js"></script>-->
 
 
-<script  src="js/stream.js"></script>
+<!--<script  src="js/stream.js"></script>-->
 <!--<script  src="js/test.js"></script>-->
-<!--<script  src="js/tt.js"></script>-->
+<script  src="js/tt.js"></script>
 
